--- a/private/skins/finalium/templates/components/_header.twig
+++ b/private/skins/finalium/templates/components/_header.twig
@@ -5,20 +5,26 @@
                 <div id="header-main">
                     <a href="/" id="logo-container"><img id="logo" src="{{ logo }}" alt="{{ website_branding.name }}"></a>
                     {% if isMaintenance != true %}
+                        {% if current_theme == 'qobo' %}
                         <div class="masthead-links-container">
                             <div class="masthead-links">
-                                {% for link in navigationList %}
+                                {% for link in header_main_links() %}
                                     <a href="{{ link.url }}">{{ link.name }}</a>
                                 {% endfor %}
                             </div>
                         </div>
+                        {% endif %}
                         <form id="masthead-search" action="/search">
+                            {% if current_theme == 'qobo' %}
                             <button id="search-btn" class="button button-secondary">
                                 <span>{{ icon("search", 16) }}</span>
                             </button>
                             <div id="masthead-search-terms">
                                 <label><input type="text" name="tags" placeholder="Search..."></label>
                             </div>
+                            {% else %}
+                                <input type="text" class="form-control form-long uploader-form" name="tags">
+                            {% endif %}
                         </form>
                     {% endif %}
                 </div>
