--- a/private/skins/finalium/templates/index.twig
+++ b/private/skins/finalium/templates/index.twig
@@ -1,10 +1,32 @@
 {% extends "_layout.twig" %}
 {% block title %}Home{% endblock %}
 
+{# hack to prevent twig from outputing the number 1 #}
+{% if is_user_logged_in %}
+    {% if totalSubscribers != 1 %}
+        {% set pluralSubscribers = "s" %}
+    {% endif %}
+    {% if totalViews != 1 %}
+        {% set pluralViews = "s" %}
+    {% endif %}
+{% endif %}
+
 	{% block precontent %}
 {% if current_theme != 'nostalgia' %}
 <div class="indexNext">
     <div class="main-content">
+        {% if current_theme == 'qobo' %}
+            <div class="container sb-welcome">
+                {% if is_user_logged_in %}
+                    <h1>Welcome to {{ website_branding.name }}, {{ user_data.title }}</h1>
+                    <p>{{ totalSubscribers ?? "no" }} follower{{ pluralSubscribers }} - {{ totalViews ?? "no" }} view{{ pluralViews }} (FIXME: inaccurate info)</p>
+                {% else %}
+                    <h1>Welcome to {{ website_branding.name }}</h1>
+                    <a class="button button-primary button-large" href="/register.php">Get started</a>
+                    <a class="button button-secondary button-large" href="/login.php">Login</a>
+                {% endif %}
+            </div>
+        {% else %}
         <div class="container page-container">
             {% if is_user_logged_in %}
                 <div class="col-md-10">
@@ -14,20 +36,19 @@
                        href="/my_submissions">Manage {{ icon('caret-right-fill', 12) }}</a>
                 </div>
                 <div class="col-md-6 right stats">
-                    {# hack to prevent twig from outputing the number 1 #}
-                    {% if totalSubscribers != 1 %}
-                        {% set pluralSubscribers = "s" %}
-                    {% endif %}
-                    {% if totalViews != 1 %}
-                        {% set pluralViews = "s" %}
-                    {% endif %}
-                    <p>{{ totalSubscribers ?? "no" }} follower{{ pluralSubscribers}}
+                    <p>{{ totalSubscribers ?? "no" }} follower{{ pluralSubscribers }}
                         <br>{{ totalViews ?? "no" }} view{{ pluralViews }}</p>
                 </div>
             {% else %}
                 <div class="col-md-10">
                     <h1>Welcome to {{ website_branding.name }}</h1>
-                    <h3 style="padding:0;margin:0;">Again.</h3>
+                    <h3 style="padding:0;margin:0;">
+                        {% if is_chaziz_sb %}
+                            Your content, your narration, your niche on the web.
+                        {% else %}
+                            Insert slogan.
+                        {% endif %}
+                    </h3>
                 </div>
                 <div class="col-md-6">
                     <a class="button button-neutral button-large"
@@ -37,6 +58,7 @@
                 </div>
             {% endif %}
         </div>
+        {% endif %}
     </div>
     {% endif %}
     {% endblock %}
