--- a/scss/biscuit/default.scss
+++ b/scss/biscuit/default.scss
@@ -182,6 +182,7 @@ hr {
 @import 'default/jumbotron';
 @import 'default/menus';
 @import 'default/tabs';
+@import 'default/navigation';
 
 @import 'default/watch_page';
 @import 'default/profile_page';
