--- a/private/skins/biscuit/templates/browse.twig
+++ b/private/skins/biscuit/templates/browse.twig
@@ -10,6 +10,18 @@
         <div class="section-title">
             <h1>Browse (Page {{ current_page }} of {{ total_pages }})</h1>
         </div>
+        <ul class="nav">
+            <li {% if type=='recent' %}class="active" {% endif %}><a
+                        href="/browse?type=recent">Most recent</a></li>
+            <li {% if type=='popular' %}class="active" {% endif %}><a
+                        href="/browse?type=popular">Most popular</a></li>
+            {# <li {% if type=='discussed' %}class="active" {% endif %}><a
+                                href="/browse?type=discussed">Most discussed</a></li>
+                    <li {% if type=='favorited' %}class="active" {% endif %}><a
+                                href="/browse?type=favorited">Most favorited</a></li> #}
+            <li {% if type=='random' %}class="active" {% endif %}><a
+                        href="/browse?type=random">Random</a></li>
+        </ul>
         <div class="content-box">
             {% for submission in data.submissions %}
                 {{ include('/components/_index_submission.twig') }}
