fix api shit on finalium

--- a/private/skins/common/theme.twig
+++ b/private/skins/common/theme.twig
@@ -15,6 +15,9 @@
             {% endfor %}
         </select>
         <br>
+        <input type="checkbox" id="sounds" name="sounds" value="true">
+        <label for="sounds"> Enable UI sounds</label><br>
+        <br>
         <input type="submit" id="apply" name="apply"
                value="Apply">
     </form>
