--- a/private/skins/finalium/templates/watch.twig
+++ b/private/skins/finalium/templates/watch.twig
@@ -29,8 +29,10 @@
                      <img src="{{ profile_picture(submission.author.info.username) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
                      <a href="/user.php?name={{ submission.author.info.username }}" style="color:{{ submission.author.info.customcolor }}"><b style="height: 20px;display: inline-block;">{{ submission.author.info.username }}</b></a> {# • {{ allVideos }} videos#}
                      <br>
-                     {% if user_data.id == submission.author %}<a class="button button-secondary button-small">Settings</a>{% else %}
-                        <button id="subscribe-watch" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not log or user_data.id == submission.author %}disabled{% endif %}>{% if subscribed %}Unfollow{% else %}Follow{% endif %}</button>
+                     {% if submission.is_owner %}
+                        <a class="button button-secondary button-small">Settings</a>
+                     {% else %}
+                        <button id="subscribe-watch" class="button button-{% if submission.author.following %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not is_user_logged_in or user_data.id == submission.author.id %}disabled{% endif %}>{% if submission.author.following %}Unfollow{% else %}Follow{% endif %}</button>
                         <div class="subscribe-count">{{ submission.author.followers }}</div>
                      {% endif %}
                      <br>
@@ -38,21 +40,24 @@
                   <div class="col-md-8 right">
                      <h1 class="viewcount">{{ submission.interactions.views }}</h1>
                      <div class="likesaber">
-                        <div class="like" style="width:{{ videoRatio }}%"></div>
+                        <div class="like" style="width:{{ submission.interactions.legacy.ratio }}%"></div>
                      </div>
-                     <div class="below-likesaber">{{ icon("hand-thumbs-up-fill", 12) }} {{ total_likes }} {{ icon("hand-thumbs-down-fill", 12) }} {{ total_dislikes }}  </div>
+                     <div class="below-likesaber">
+                        {{ icon("hand-thumbs-up-fill", 12) }} {{ submission.interactions.legacy.likes }}
+                        {{ icon("hand-thumbs-down-fill", 12) }} {{ submission.interactions.legacy.dislikes }}
+                     </div>
                   </div>
                </div>
                <div class="grid" style="margin-top:5px;">
                   <div class="col-md-8">
                      <div style="margin-top:-9px;">
                         <button href="/#" id="{% if is_user_logged_in %}like{% else %}action_unlogged{% endif %}"
-                                class="button {% if rating == 1 %}button-success{% else %}button-secondary-invis{% endif %}">
+                                class="button {% if submission.interactions.legacy.current_rating == "like" %}button-success{% else %}button-secondary-invis{% endif %}">
                            {{ icon("hand-thumbs-up-fill", 20) }}
                            Like
                         </button>
                         <button href="/#" id="{% if is_user_logged_in %}dislike{% else %}action_unlogged{% endif %}"
-                                class="button {% if rating is same as(0) %}button-danger{% else %}button-secondary-invis{% endif %} tooltip" title="Dislike">
+                                class="button {% if submission.interactions.legacy.current_rating == "dislike" %}button-danger{% else %}button-secondary-invis{% endif %} tooltip" title="Dislike">
                            {{ icon("hand-thumbs-down-fill", 20) }}
                         </button>
                         {# <button href="/#" id="{% if is_user_logged_in %}favorite{% else %}action_unlogged{% endif %}"
@@ -88,13 +93,13 @@
                   <h2>Stats</h2>
                   <ul style="padding:0">
                      <li>
-                        Total favorites: {{ total_favorites }}
+                        Total favorites: {{ submission.interactions.favorites }}
                      </li>
                      <li>
-                        Like/Dislike ratio: {{ videoRatio }}%
+                        Rating ratio (Biscuit stars): {{ submission.interactions.ratings.average * 20 }}%
                      </li>
                      <li>
-                        Last seen: {{ recentView | relative_time }}
+                        Rating ratio (Likes/Dislikes): {{ submission.interactions.legacy.ratio }}%
                      </li>
                   </ul>
                </div>
