--- a/private/skins/finalium/templates/components/beta/_footer.twig
+++ b/private/skins/finalium/templates/components/beta/_footer.twig
@@ -6,4 +6,5 @@
         <b>Submissions uploaded</b>: {{ footer_stats.submissions }}
     </p>
     <h5><a href="/version.php">Git Commit {{ opensb_version }}</a><br></h5>
+    <a href="/privacy">Privacy Policy</a> | <a href="/theme">Change theme</a>
 </div>
