--- a/private/skins/finalium/templates/components/beta/_header.twig
+++ b/private/skins/finalium/templates/components/beta/_header.twig
@@ -18,17 +18,17 @@
                 </div>
             {% else %}
                 <div style="display: flex;justify-content: center;align-items: center;gap: 5px;margin-top: 2px;">
-                    <a href="/loginuser_data">Sign in</a>
-                    <a href="/registeruser_data">Register</a>
+                    <a href="/login">Login</a>
+                    <a href="/register">Register</a>
                 </div>
             {% endif %}
         </div>
         <div id="masthead-content">
             <div id="masthead-upload-button-group" style="display: flex;justify-content: center;align-items: center;gap: 5px;margin-top: 5px;">
-                <a href="/browseuser_data">Browse</a>
-                <a href="/uploaduser_data">Upload</a>
+                <a href="/browse">Browse</a>
+                <a href="/upload">Upload</a>
             </div>
-            <form id="masthead-search" action="/resultsuser_data">
+            <form id="masthead-search" action="/results">
                 <button id="search-btn" class="button button-secondary">
                     <span>{{ icon('search', 14) }}</span>
                 </button>
