--- a/scss/biscuit/default/_profile_page.scss
+++ b/scss/biscuit/default/_profile_page.scss
@@ -57,7 +57,7 @@
   background: linear-gradient(0deg, rgba($content-box-border-color,75%) 0%, rgba(0,0,0,0) 100%);
   margin-top: -$profile-intro-height;
 
-  text-shadow: 0 0 0.5em #000000;
+  text-shadow: 0 0 0.5em #00000050;
 
   .page-contents {
     margin: auto;
