--- a/private/skins/biscuit/templates/_layout.twig
+++ b/private/skins/biscuit/templates/_layout.twig
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }} - {{ website_branding.name }}</title>
+    <link rel="manifest" href="{{ website_branding.assets_location }}/icons/site.webmanifest">
+    <link rel="shortcut icon" href="{{ website_branding.assets_location }}/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ website_branding.assets_location }}/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ website_branding.assets_location }}/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ website_branding.assets_location }}/icons/favicon-16x16.png">
+    <meta name="apple-mobile-web-app-title" content="{{ website_branding.name }}">
+    <meta name="application-name" content="{{ website_branding.name }}">
     <link rel="stylesheet" href="/assets/css/{{ current_theme }}.css?r={{ get_css_file_date() }}">
-    <meta name="theme-color" content="#FF723D">
+    <meta name="theme-color" content="#FF8A00">
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:url" content="{{ page_url }}">
     <meta property="og:site_name" content="{{ website_branding.name }}" />
