--- a/private/skins/finalium/templates/_layout.twig
+++ b/private/skins/finalium/templates/_layout.twig
@@ -16,11 +16,11 @@
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %} - {{ website_branding.name }}</title>
     {% block head %}{% endblock %}
-    <link rel="manifest" href="/{{ website_branding.assets_location }}/icons/site.webmanifest">
-    <link rel="shortcut icon" href="/{{ website_branding.assets_location }}/icons/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="/{{ website_branding.assets_location }}/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/{{ website_branding.assets_location }}/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/{{ website_branding.assets_location }}/icons/favicon-16x16.png">
+    <link rel="manifest" href="{{ website_branding.assets_location }}/icons/site.webmanifest">
+    <link rel="shortcut icon" href="{{ website_branding.assets_location }}/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ website_branding.assets_location }}/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ website_branding.assets_location }}/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ website_branding.assets_location }}/icons/favicon-16x16.png">
     <meta name="apple-mobile-web-app-title" content="{{ website_branding.name }}">
     <meta name="application-name" content="{{ website_branding.name }}">
     <meta name="theme-color" content="#ffffff">
